fix: prevent glitch text from overflowing elements (#250)

--- a/src/v2/styles/Autocomplete/Autocomplete-layout.scss
+++ b/src/v2/styles/Autocomplete/Autocomplete-layout.scss
@@ -49,6 +49,7 @@
 
   .str-chat__user-item--name {
     @include utils.ellipsis-text;
+    @include utils.prevent-glitch-text-overflow;
     width: 100%;
   }
 }
