--- a/src/v2/styles/ChannelSearch/ChannelSearch-layout.scss
+++ b/src/v2/styles/ChannelSearch/ChannelSearch-layout.scss
@@ -110,6 +110,11 @@
       width: 100%;
       column-gap: var(--str-chat__spacing-2);
       padding: var(--str-chat__spacing-3) var(--str-chat__spacing-2);
+
+      .channel-search__result-text,
+      .str-chat__channel-search-result--display-name {
+        @include utils.prevent-glitch-text-overflow;
+      }
     }
   }
 }
